admission-registration.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eviction-webhook
---
apiVersion: v1
kind: Service
metadata:
  name: eviction-webhook
  namespace: eviction-webhook
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: eviction-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eviction-webhook
  namespace: eviction-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eviction-webhook
  template:
    metadata:
      labels:
        app: eviction-webhook
    spec:
      serviceAccountName: eviction-webhook
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: server
          image: quay.io/mrincompetent/eviction-webhook:v0.0.1
          command: [ "/eviction-webhook" ]
          args: [
            "-listen-address", "0.0.0.0:8443",
            "-tls.cert-path", "/etc/webhook/certs/tls.crt",
            "-tls.key-path", "/etc/webhook/certs/tls.key",
          ]
          ports:
            - containerPort: 8443
              name: webhook
          readinessProbe:
            httpGet:
              path: /ready
              port: webhook
              scheme: HTTPS
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          lifecycle:
            preStop:
              exec:
                command: [ "/bin/sleep", "10" ]
          volumeMounts:
            - name: certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: eviction-webhook-certs
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "eviction-webhook.mrincompetent.io"
  annotations:
    cert-manager.io/inject-ca-from: eviction-webhook/eviction-webhook-cert
webhooks:
  - name: "eviction-webhook.mrincompetent.io"
    rules:
      - apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE" ]
        resources: [ "pods/eviction" ]
        scope: "Namespaced"
    clientConfig:
      service:
        name: eviction-webhook
        namespace: eviction-webhook
        path: "/validate-eviction"
    admissionReviewVersions: [ "v1" ]
    sideEffects: None
    timeoutSeconds: 30
